# fDetect

./: main.py  pyproject.toml
